# agent-trajectory-profiler

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README.zh.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: backend-performance.yml  ci.yml  nightly-frontend.yml
.original_spec/: ClaudeCodeVis.md
.prd/: rate_limit.json  state.json
.prd/prds/: prd_20260204_224944.json
agent_vis/: __init__.py  exceptions.py  models.py  session_clustering.py  session_embeddings.py  session_summaries.py
agent_vis/api/: __init__.py  app.py  config.py  models.py  service.py
agent_vis/cli/: __init__.py  main.py
agent_vis/db/: __init__.py  connection.py  repository.py  schema.py  sync.py
agent_vis/formatters/: __init__.py  human.py
agent_vis/parsers/: __init__.py  base.py  canonical.py  capabilities.py  character_classifier.py  claude_code.py  codex.py  decoders.py  error_taxonomy.py  normalization.py  registry.py  session_parser.py
agent_vis/perf/: __init__.py  backend_runner.py  framework.py  parser_benchmark.py  sync_profiler.py
agent_vis/prompts/: __init__.py  analyze.py  session_summary.py
agent_vis/reporting/: __init__.py  telegram.py
claude_vis/: __init__.py  exceptions.py  models.py
claude_vis/api/: __init__.py  app.py  config.py  main.py  models.py  service.py
claude_vis/cli/: __init__.py  main.py
claude_vis/db/: __init__.py  connection.py  repository.py  schema.py  sync.py
claude_vis/formatters/: __init__.py  human.py
claude_vis/parsers/: __init__.py  base.py  canonical.py  claude_code.py  codex.py  registry.py  session_parser.py
claude_vis/prompts/: analyze.py
docs/: agent-capability-manifest.md  agent-vis-home-layout.md  claude-jsonl-format.md  claude-jsonl-format.zh.md  output-levels.md  performance.md  port-handling.md  telegram-report.md
docs/agents/: README.md  _template.md  claude_code.md  codex.md
docs/standards/: canonical-db-sync-contract.md  canonical-trajectory-schema.md  metric-capability-matrix.md  query-export-contract.md  timestamp-annotation-capability-matrix.md
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/playwright-report/: index.html
frontend/scripts/: generate-api-types.mjs  validate-playwright-tags.mjs
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/tests/: accessibility.spec.ts  advanced-analytics-ux.spec.ts  api-base-url.spec.ts  chart-axis-units.spec.ts  codex-parity.spec.ts  cross-session-char-metrics.spec.ts  date-filter.spec.ts  day-night-analytics.spec.ts  density-mode.spec.ts  language-switch.spec.ts  metric-glossary.spec.ts  preferences-migration.spec.ts  project-swimlane.spec.ts  quality-gates.spec.ts  session-browser.spec.ts  session-card-interaction.spec.ts  session-filter.spec.ts  session-loading-ux.spec.ts  session-loading.spec.ts  session-metadata-theme.spec.ts  session-table-mode.spec.ts  source-segmentation.spec.ts  statistics-dashboard.spec.ts  sync-control.spec.ts  tab-navigation.spec.ts  time-breakdown-analytics.spec.ts  timeline-message-expansion.spec.ts  timeline-scroll-behavior.spec.ts  visual-regression.spec.ts  visual.spec.ts
scripts/: export_openapi_schema.py  profile_real_sync.py  run_backend_perf.py  run_parser_bench.py
src/: lib.rs
tests/: __init__.py  conftest.py  test_api_contract_schema.py  test_api_integration.py  test_canonical_conversion.py  test_capability_manifest.py  test_character_classifier_native.py  test_character_metrics.py  test_claude_parse_architecture.py  test_cli_analytics_command.py  test_cli_dashboard_command.py  test_cli_readonly_command.py  test_cli_report_command.py  test_codex_parity.py  test_codex_parser.py  test_codex_private_real_session.py  test_error_taxonomy.py  test_full_stack_integration.py  test_models.py  test_namespace_compat.py  test_namespace_contract.py  test_parser.py  test_parser_decoder_benchmark.py  test_parser_integration.py  test_parser_normalization.py  test_perf_framework.py  test_perf_runner.py  test_repository.py  test_session_clustering.py  test_session_embeddings.py  test_session_summaries.py  test_statistics.py  test_statistics_integration.py  test_sync.py  test_sync_private_real_profile.py  test_sync_profiler.py  test_telegram_reporting.py
tests/fixtures/: error_taxonomy_examples.json
(+83 files in other folders)
